fix home portfolio item content always visible

--- a/assets/css/samettof.less
+++ b/assets/css/samettof.less
@@ -260,7 +260,7 @@ a:hover {
   }
   span .portfolio-item-content {
     bottom: 25px;
-    opacity: 0;
+    opacity: 1;
   }
 }
 
